--- a/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
@@ -31,7 +31,7 @@
  * @see Mage_Catalog_Block_Product_List
  */
 ?>
-
+</p></div>
 <?php
 function timeBetweenNowAndDeadline($deadline) {
     $deadline = strtotime($deadline);
@@ -122,3 +122,4 @@ foreach ($categories as $_category){
 	 });
 			
 </script>
+<div><p>
