--- a/app/design/frontend/default/rooja/template/checkout/onepage/billing.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage/billing.phtml
@@ -173,7 +173,7 @@ function loggedInBilling()
 
     <div id="billing-buttons-container">
           <!-- <button type="button" class="button right" onclick="billing.save()"><span>Confirm Address</span></button> -->
-        <span id="billing-please-wait" style="display:none; opacity: 0;" class="opc-please-wait">
+        <span id="billing-please-wait" style="display:none; opacity: 0;filter: alpha(opacity = 0);" class="opc-please-wait">
             <img src="<?php echo $this->getSkinUrl('images/opc-ajax-loader.gif') ?>" class="v-middle" alt="" /> &nbsp; <?php echo $this->__('Loading next step...') ?> &nbsp;
         </span>
     </div>
