--- a/app/design/frontend/default/rooja/template/page/lockdown.phtml
+++ b/app/design/frontend/default/rooja/template/page/lockdown.phtml
@@ -67,8 +67,7 @@ jQuery(document).ready(function() {
 	jQuery("a.fancyboxLink").fancybox({
 		autoScale: true,
 		titleShow: false,
-		overlayColor: "#111",
-		type: "inline"
+		overlayColor: "#111"
 	});
 
 });
