--- a/app/design/frontend/default/rooja/template/page/lockdown.phtml
+++ b/app/design/frontend/default/rooja/template/page/lockdown.phtml
@@ -64,7 +64,12 @@ P.S. Hurry!"/>
 <script type="text/javascript">
 jQuery(document).ready(function() {
 
-	jQuery("a.fancyboxLink").fancybox();
+	jQuery("a.fancyboxLink").fancybox({
+		autoScale: true,
+		titleShow: false,
+		overlayColor: "#111",
+		type: "inline"
+	});
 
 });
 </script>
