--- a/app/design/frontend/default/rooja/template/page/lockdown.phtml
+++ b/app/design/frontend/default/rooja/template/page/lockdown.phtml
@@ -64,12 +64,12 @@ P.S. Hurry!"/>
 <script type="text/javascript">
 jQuery(document).ready(function() {
 
-	jQuery("a.fancyboxLink").fancybox({
-		autoScale: true,
-		titleShow: false,
-		overlayColor: "#111",
-		type: "inline"
-	});
+	// jQuery("a.fancyboxLink").fancybox({
+	// 	autoScale: true,
+	// 	titleShow: false,
+	// 	overlayColor: "#111",
+	// 	type: "inline"
+	// });
 
 });
 </script>
