--- a/app/design/frontend/default/rooja/template/page/lockdown.phtml
+++ b/app/design/frontend/default/rooja/template/page/lockdown.phtml
@@ -62,14 +62,14 @@ P.S. Hurry!"/>
 
 </script>
 <script type="text/javascript">
-jQuery(document).ready(function() {
+jQuery(document).load(function() {
 
-	// jQuery("a.fancyboxLink").fancybox({
-	// 	autoScale: true,
-	// 	titleShow: false,
-	// 	overlayColor: "#111",
-	// 	type: "inline"
-	// });
+	jQuery("a.fancyboxLink").fancybox({
+		autoScale: true,
+		titleShow: false,
+		overlayColor: "#111",
+		type: "inline"
+	});
 
 });
 </script>
