sale status item page

--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -183,7 +183,7 @@ echo '<span>' . $likes = $xml->link_stat->like_count . '</span>';
 	            	<?php echo $this->getChildChildHtml('container1', '', true, false) ?>
 
 			<?php if ($expired != 1) {?>
-			<img src="../images/expired.jpg">
+			<p class="expired">Expired</p>
 			<?php } ?>
 			
 			
