--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -664,9 +664,9 @@ h2#saleDetails{color:#c60;margin:22px 0 5px;}
 
 #addToBagBtn{background-image:url(../images/icons/add-to-bag.png);width:230px;height:50px;margin-top:5px;border:none;cursor:pointer;}
 #estimatedShippingDate{width:230px;padding:8px 0;text-align:center;background-color:#bb6e17;color:#fff;margin:0;}
-#soldOut {background-image:url(../images/icons/soulout.png);width:230px;height:83px;margin-top:5px;border:none;cursor:pointer;}
+#soldOut {background-image:url(../images/icons/soldout.png);width:230px;height:83px;margin-top:5px;border:none;cursor:pointer;}
 #soldOut span, #expired span {display:none;}
-#expired {background-image:url(../images/icons/expired.png);width:230px;height:83px;margin-top:5px;border:none;cursor:pointer;}
+#expired {background-image:url(../images/icons/expired.png);width:230px;height:83px;margin-top:5px;border:none;cursor:pointer;text-indent:-999px;}
 
 #prevNextLinks{margin:5px 0 0;position: absolute;width: 80px;}
 #prevProduct, #nextProduct {position:relative;}
