--- a/app/design/frontend/default/rooja/template/customer/form/login.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/login.phtml
@@ -33,7 +33,7 @@
 ?>
 <script src="/js/jquery.defaultvalue.js" type="text/javascript"></script> 
 <script type="text/javascript">
-jQuery(document).load(function() {
+jQuery(window).load(function() {
 	
 	jQuery('input[type="text"], input[type="password"]').defaultValue({
 		preferPlaceholder: true
