--- a/app/design/frontend/default/rooja/template/page/lockdown.phtml
+++ b/app/design/frontend/default/rooja/template/page/lockdown.phtml
@@ -62,7 +62,7 @@ P.S. Hurry!"/>
 
 </script>
 <script type="text/javascript">
-jQuery(window).load(function() {
+jQuery(document).ready(function() {
 
 	jQuery("a.fancyboxLink").fancybox({
 		autoScale: true,
