--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -664,7 +664,7 @@ h2#saleDetails{color:#c60;margin:22px 0 5px;}
 
 #addToBagBtn{background-image:url(../images/icons/add-to-bag.png);width:230px;height:50px;margin-top:5px;border:none;cursor:pointer;}
 #estimatedShippingDate{width:230px;padding:8px 0;text-align:center;background-color:#bb6e17;color:#fff;margin:0;}
-#soldOut {background-image:url(../images/icons/soldout.jpg);width:230px;height:83px;margin-top:5px;border:none;cursor:pointer;}
+#soldOut {background-image:url(../images/icons/soldout.jpg);width:230px;height:83px;margin-top:5px;border:none;cursor:pointer;text-indent: -9999px;margin-bottom: 0px;}
 #soldOut span, #expired span {display:none;}
 #expired {background-image:url(../images/icons/expired.jpg);width:230px;height:83px;margin-top:5px;border:none;cursor:pointer;text-indent: -9999px;margin-bottom: 0px;}
 
