--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -209,6 +209,7 @@ echo '<span>' . $likes = $xml->link_stat->like_count . '</span>';
 
 						<section id="purchaseProduct" class="col1 fl noMargin">
 									<p id="soldOut">Sold Out</p>
+			<?php } ?>
 
 			<?php } ?>
 
