sale status item page

--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -190,6 +190,7 @@ echo '<span>' . $likes = $xml->link_stat->like_count . '</span>';
 		        <?php } ?>
 			<?php } else {?>
 				</section>
+				</section>
 			<?php } ?>
 
 
