--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -177,6 +177,15 @@ echo '<span>' . $likes = $xml->link_stat->like_count . '</span>';
 					
 	<?php echo $this->getChildChildHtml('container2', '', true, false) ?>
 				<?php } else { ?>
+							<section id="productOptions">
+									<p class="startingPrice">Original Price: <strike>Rs. <?php echo number_format($_product->getPrice(), 2) ?></strike></p>
+								<p class="currentPrice">Current Price:<span>
+								<?php if (!$fbprice == null) { ?>
+								<?php echo 'Rs. ' . number_format($fbprice,2); } else { ?>
+								<?php $fbprice = number_format($_product->getSpecialprice(), 2);echo 'Rs. ' . $fbprice; } ?></span></p>
+								<a href="#" class="sizeChart fr">Size Chart</a>
+
+								<br class="clear">
 
 				            	<?php echo $this->getChildChildHtml('container1', '', true, false) ?>
 					<?php echo $this->getChildHtml('addtocart') ?>
