--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -175,8 +175,12 @@ echo '<span>' . $likes = $xml->link_stat->like_count . '</span>';
 			<?php if (($expired == 1) && (!$categoryIds == null)) { ?>
 				<?php if ($_product->isSaleable() && $this->hasOptions()) { ?>
 					
-	<?php echo $this->getChildChildHtml('container2', '', true, false) ?>
+					<?php echo $this->getChildChildHtml('container2', '', true, false) ?>
 				<?php } else { ?>
+					<?php if (($expired == 1) && (!$categoryIds == null)) { ?>
+						<?php if ($_product->isSaleable() == false) { ?>
+							<?php } } else {?>
+					
 							<section id="productOptions">
 									<p class="startingPrice">Original Price: <strike>Rs. <?php echo number_format($_product->getPrice(), 2) ?></strike></p>
 								<p class="currentPrice">Current Price:<span>
@@ -189,7 +193,7 @@ echo '<span>' . $likes = $xml->link_stat->like_count . '</span>';
 
 				            	<?php echo $this->getChildChildHtml('container1', '', true, false) ?>
 					<?php echo $this->getChildHtml('addtocart') ?>
-		        <?php } ?>
+		        <?php }} ?>
 			<?php } else {?>
 				</section>
 			<?php } ?>
