--- a/app/design/frontend/default/rooja/template/page/lockdown.phtml
+++ b/app/design/frontend/default/rooja/template/page/lockdown.phtml
@@ -62,16 +62,18 @@ P.S. Hurry!"/>
 
 </script>
 <script type="text/javascript">
-jQuery(document).ready(function() {
+(function ($) {
+	
+	$(document).ready(function() {
 
-	jQuery("a.fancyboxLink").fancybox({
+	$("a.fancyboxLink").fancybox({
 		autoScale: true,
 		titleShow: false,
 		overlayColor: "#111",
 		type: "inline"
 	});
 
-});
+})(jQ);
 </script>
 
 </head>
