sale status item page

--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -208,6 +208,16 @@ echo '<span>' . $likes = $xml->link_stat->like_count . '</span>';
 			<?php } ?>
 
 
+			<?php if (($expired == 1) && (!$categoryIds == null)) { ?>
+				<?php if ($_product->isSaleable() == false) { ?>
+
+						<section id="purchaseProduct" class="col1 fl noMargin">
+									<p id="soldOut">Sold Out</p>
+			<?php } ?>
+
+			<?php } ?>
+
+
 
 <?php
                 /**
