--- a/app/design/frontend/default/rooja/template/customer/form/login.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/login.phtml
@@ -33,20 +33,22 @@
 ?>
 <script src="/js/jquery.defaultvalue.js" type="text/javascript"></script> 
 <script type="text/javascript">
-jQuery(document).ready(function() {
+(function ($) {
+	$(document).ready(function() {
 	
-	jQuery('input[type="text"], input[type="password"]').defaultValue({
-		preferPlaceholder: true
+		$('input[type="text"], input[type="password"]').defaultValue({
+			preferPlaceholder: true
+		});
+	
+		setTimeout(function() {
+			// Chrome does not fire a change event when autofilling forms
+			// To prevent weird overlap with defaultValue and Chrome autofill,
+			// fire your own change event after 100 or so milliseconds
+			$('input[type="text"]').change();
+		}, 100);
+	
 	});
-	
-	setTimeout(function() {
-		// Chrome does not fire a change event when autofilling forms
-		// To prevent weird overlap with defaultValue and Chrome autofill,
-		// fire your own change event after 100 or so milliseconds
-		jQuery('input[type="text"]').change();
-	}, 100);
-	
-});
+})(jQ);
 </script>
 <div id="notifyWrapper">
 <div class="wrapper">
@@ -113,13 +115,15 @@ jQuery(document).ready(function() {
 </div>
 
 <script type="text/javascript">
-	jQuery(document).ready(function(){
-			jQuery("a#loginTab").click(
-				 function() {jQuery("#getInvitedCont").hide(); jQuery("#loginCont").show(); jQuery("#loginTab").addClass('selected'); jQuery("#getInvitedTab").removeClass('selected');return false;}
+(function ($) {
+	$(document).ready(function(){
+			$("a#loginTab").click(
+				 function() {$("#getInvitedCont").hide(); $("#loginCont").show(); $("#loginTab").addClass('selected'); $("#getInvitedTab").$('selected');return false;}
 			);
-			jQuery("a#getInvitedTab").click(
-				 function() {jQuery("#getInvitedCont").show();jQuery("#loginCont").hide(); jQuery("#loginTab").removeClass('selected'); jQuery("#getInvitedTab").addClass('selected');return false;}
+			$("a#getInvitedTab").click(
+				 function() {$("#getInvitedCont").show();$("#loginCont").hide(); $("#loginTab").removeClass('selected'); $("#getInvitedTab").addClass('selected');return false;}
 			);
 	 });
+})(jQ);
 			
 </script>
