--- a/app/design/frontend/default/rooja/template/customer/form/login.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/login.phtml
@@ -47,6 +47,32 @@ jQuery(document).ready(function() {
 	}, 100);
 	
 });
+
+var fadeDuration=2000;
+    var slideDuration=4000;
+    var currentIndex=1;
+    var nextIndex=1;
+    $(document).ready(function()
+    {
+        $('ul.slideshow li img').corner();
+        $('ul.slideshow li').css({opacity: 0.0});
+        $("'ul.slideshow li:nth-child("+nextIndex+")'").addClass('show').animate({opacity: 1.0}, fadeDuration);
+        var timer = setInterval('nextSlide()',slideDuration);
+    })
+ 
+    function nextSlide(){
+            nextIndex =currentIndex+1;
+            if(nextIndex> $('ul.slideshow li').length)
+            {
+                nextIndex =1;
+            }
+            $("'ul.slideshow li:nth-child("+nextIndex+")'").addClass('show').animate({opacity: 1.0}, fadeDuration);
+            $("'ul.slideshow li:nth-child("+currentIndex+")'").animate({opacity: 0.0}, fadeDuration).removeClass('show');
+            currentIndex = nextIndex;
+    }
+
+
+
 </script>
 <div id="notifyWrapper">
 <div class="wrapper">
@@ -100,15 +126,16 @@ jQuery(document).ready(function() {
 </section><!--End Content-->
 </div>
 	<section id="brands">
-		<div id="brandCol1" class="">
+		<ul class="slideshow">
+		<li>
 			<img src="<?php echo $this->getSkinUrl('images/splash/logos/1.png') ?>">
-		</div>
-		<div id="brandCol2" class="">
+		</li>
+		<li>
 			<img src="<?php echo $this->getSkinUrl('images/splash/logos/2.png') ?>">
-		</div>
-		<div id="brandCol3" class="">
+		</li>
+		<li>
 			<img src="<?php echo $this->getSkinUrl('images/splash/logos/3.png') ?>">
-		</div>
+		</li>
 	</section>
 </div>
 
