--- a/app/design/frontend/default/rooja/template/customer/form/login.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/login.phtml
@@ -123,15 +123,11 @@ var fadeDuration=2000;
 </section><!--End Content-->
 </div>
 	<section id="brands">
-		<div id="brandCol1" class="">
-			<img src="<?php echo $this->getSkinUrl('images/splash/logos/1.png') ?>">
-		</div>
-		<div id="brandCol2" class="">
-			<img src="<?php echo $this->getSkinUrl('images/splash/logos/2.png') ?>">
-		</div>
-		<div id="brandCol3" class="">
-			<img src="<?php echo $this->getSkinUrl('images/splash/logos/3.png') ?>">
-		</div>
+		<ul class="slideshow">
+					<li><img src="<?php echo $this->getSkinUrl('images/splash/logos/1.png') ?>"></li>
+					<li><img src="<?php echo $this->getSkinUrl('images/splash/logos/2.png') ?>"></li>
+					<li><img src="<?php echo $this->getSkinUrl('images/splash/logos/3.png') ?>"></li>
+		</ul>
 	</section>
 </div>
 
