--- a/app/design/frontend/default/rooja/template/customer/form/login.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/login.phtml
@@ -109,34 +109,32 @@ jQuery(document).ready(function() {
 </div>
 
 <script type="text/javascript">
-	jQuery(document).ready(function(){
-			jQuery("a#loginTab").click(
-				 function() {jQuery("#getInvitedCont").hide(); jQuery("#loginCont").show(); jQuery("#loginTab").addClass('selected'); jQuery("#getInvitedTab").removeClass('selected');return false;}
+	jQ(document).ready(function(){
+			jQ("a#loginTab").click(
+				 function() {jQ("#getInvitedCont").hide(); jQ("#loginCont").show(); jQ("#loginTab").addClass('selected'); jQ("#getInvitedTab").removeClass('selected');return false;}
 			);
-			jQuery("a#getInvitedTab").click(
-				 function() {jQuery("#getInvitedCont").show();jQuery("#loginCont").hide(); jQuery("#loginTab").removeClass('selected'); jQuery("#getInvitedTab").addClass('selected');return false;}
+			jQ("a#getInvitedTab").click(
+				 function() {jQ("#getInvitedCont").show();jQ("#loginCont").hide(); jQ("#loginTab").removeClass('selected'); jQ("#getInvitedTab").addClass('selected');return false;}
 			);
-	 });
+
 	
 	var fadeDuration=2000;
 		var slideDuration=4000;
 		var currentIndex=1;
 		var nextIndex=1;
-		$(document).ready(function()
-		{
-			$('ul.slideshow li img').corner();
-			$('ul.slideshow li').css({opacity: 0.0});
-			$("'ul.slideshow li:nth-child("+nextIndex+")'").addClass('show').animate({opacity: 1.0}, fadeDuration);
+			jQ('ul.slideshow li img').corner();
+			jQ('ul.slideshow li').css({opacity: 0.0});
+			jQ("'ul.slideshow li:nth-child("+nextIndex+")'").addClass('show').animate({opacity: 1.0}, fadeDuration);
 			var timer = setInterval('nextSlide()',slideDuration);
 		})
 		function nextSlide(){
 				nextIndex =currentIndex+1;
-				if(nextIndex > $('ul.slideshow li').length)
+				if(nextIndex > jQ('ul.slideshow li').length)
 				{
 					nextIndex =1;
 				}
-				$("'ul.slideshow li:nth-child("+nextIndex+")'").addClass('show').animate({opacity: 1.0}, fadeDuration);
-				$("'ul.slideshow li:nth-child("+currentIndex+")'").animate({opacity: 0.0}, fadeDuration).removeClass('show');
+				jQ("'ul.slideshow li:nth-child("+nextIndex+")'").addClass('show').animate({opacity: 1.0}, fadeDuration);
+				jQ("'ul.slideshow li:nth-child("+currentIndex+")'").animate({opacity: 0.0}, fadeDuration).removeClass('show');
 				currentIndex = nextIndex;
 		}
 	
