--- a/app/design/frontend/default/rooja/template/customer/form/login.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/login.phtml
@@ -109,6 +109,10 @@ jQuery(document).ready(function() {
 </div>
 
 <script type="text/javascript">
+var fadeDuration=2000;
+	var slideDuration=4000;
+	var currentIndex=1;
+	var nextIndex=1;
 	jQ(document).ready(function(){
 			jQ("a#loginTab").click(
 				 function() {jQ("#getInvitedCont").hide(); jQ("#loginCont").show(); jQ("#loginTab").addClass('selected'); jQ("#getInvitedTab").removeClass('selected');return false;}
@@ -116,25 +120,23 @@ jQuery(document).ready(function() {
 			jQ("a#getInvitedTab").click(
 				 function() {jQ("#getInvitedCont").show();jQ("#loginCont").hide(); jQ("#loginTab").removeClass('selected'); jQ("#getInvitedTab").addClass('selected');return false;}
 			);
-
-	
-	var fadeDuration=2000;
-		var slideDuration=4000;
-		var currentIndex=1;
-		var nextIndex=1;
-			jQ('ul.slideshow li').css({opacity: 0.0});
-			jQ("'ul.slideshow li:nth-child("+nextIndex+")'").addClass('show').animate({opacity: 1.0}, fadeDuration);
-			var timer = setInterval('nextSlide()',slideDuration);
-		function nextSlide(){
-				nextIndex =currentIndex+1;
-				if(nextIndex > jQ('ul.slideshow li').length)
-				{
-					nextIndex =1;
+			
+			
+					
+					$('ul.slideshow li').css({opacity: 0.0});
+					$("'ul.slideshow li:nth-child("+nextIndex+")'").addClass('show').animate({opacity: 1.0}, fadeDuration);
+					var timer = setInterval('nextSlide()',slideDuration);
+				})
+				function nextSlide(){
+						nextIndex =currentIndex+1;
+						if(nextIndex > $('ul.slideshow li').length)
+						{
+							nextIndex =1;
+						}
+						$("'ul.slideshow li:nth-child("+nextIndex+")'").addClass('show').animate({opacity: 1.0}, fadeDuration);
+						$("'ul.slideshow li:nth-child("+currentIndex+")'").animate({opacity: 0.0}, fadeDuration).removeClass('show');
+						currentIndex = nextIndex;
 				}
-				jQ("'ul.slideshow li:nth-child("+nextIndex+")'").addClass('show').animate({opacity: 1.0}, fadeDuration);
-				jQ("'ul.slideshow li:nth-child("+currentIndex+")'").animate({opacity: 0.0}, fadeDuration).removeClass('show');
-				currentIndex = nextIndex;
-		}
 	});
 	
 			
