--- a/skin/frontend/default/rooja/css/login.css
+++ b/skin/frontend/default/rooja/css/login.css
@@ -281,7 +281,7 @@ h1#about{
 #gender select{float:left;width:100px;}
 
 
-#brands ul li{display:inline;position:relative;padding:0px 45px 25px 0;float:left;}
+/*#brands ul li{display:inline;position:relative;padding:0px 45px 25px 0;float:left;}*/
 #brands ul li.last{padding-right:0;}
 #brands ul li.bot{padding-bottom:0;}
 #brands ul li img{vertical-align:middle;}
