--- a/skin/frontend/default/rooja/css/login.css
+++ b/skin/frontend/default/rooja/css/login.css
@@ -167,6 +167,7 @@ form button#send2{
 		list-style: none;
 		position:relative;
 		display:block;
+		height:19px;
 	}
  	ul.slideshow li {
 		position:absolute;
