--- a/app/design/frontend/default/rooja/template/customer/form/login.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/login.phtml
@@ -33,20 +33,22 @@
 ?>
 <script src="/js/jquery.defaultvalue.js" type="text/javascript"></script> 
 <script type="text/javascript">
-jQuery(document).ready(function() {
+(function ($) {
+	$(document).ready(function() {
 	
-	jQuery('input[type="text"], input[type="password"]').defaultValue({
-		preferPlaceholder: true
+		$('input[type="text"], input[type="password"]').defaultValue({
+			preferPlaceholder: true
+		});
+	
+		setTimeout(function() {
+			// Chrome does not fire a change event when autofilling forms
+			// To prevent weird overlap with defaultValue and Chrome autofill,
+			// fire your own change event after 100 or so milliseconds
+			$('input[type="text"]').change();
+		}, 100);
+	
 	});
-	
-	setTimeout(function() {
-		// Chrome does not fire a change event when autofilling forms
-		// To prevent weird overlap with defaultValue and Chrome autofill,
-		// fire your own change event after 100 or so milliseconds
-		jQuery('input[type="text"]').change();
-	}, 100);
-	
-});
+})(jQ);
 </script>
 <div id="notifyWrapper">
 <div class="wrapper">
@@ -109,36 +111,36 @@ jQuery(document).ready(function() {
 </div>
 
 <script type="text/javascript">
-	jQuery(document).ready(function(){
-			jQuery("a#loginTab").click(
-				 function() {jQuery("#getInvitedCont").hide(); jQuery("#loginCont").show(); jQuery("#loginTab").addClass('selected'); jQuery("#getInvitedTab").removeClass('selected');return false;}
-			);
-			jQuery("a#getInvitedTab").click(
-				 function() {jQuery("#getInvitedCont").show();jQuery("#loginCont").hide(); jQuery("#loginTab").removeClass('selected'); jQuery("#getInvitedTab").addClass('selected');return false;}
-			);
-	 });
+(function ($) {
+	$(document).ready(function () {
+		$("a#loginTab").click(
+			 function() {$("#getInvitedCont").hide(); $("#loginCont").show(); $("#loginTab").addClass('selected'); $("#getInvitedTab").removeClass('selected');return false;}
+		);
+		$("a#getInvitedTab").click(
+			 function() {$("#getInvitedCont").show();$("#loginCont").hide(); $("#loginTab").removeClass('selected'); $("#getInvitedTab").addClass('selected');return false;}
+		);
+	});
 	
 	var fadeDuration=2000;
-		var slideDuration=4000;
-		var currentIndex=1;
-		var nextIndex=1;
-		$(document).ready(function()
+	var slideDuration=4000;
+	var currentIndex=1;
+	var nextIndex=1;
+	$(document).ready(function () {
+		$('ul.slideshow li img').corner();
+		$('ul.slideshow li').css({opacity: 0.0});
+		$("'ul.slideshow li:nth-child("+nextIndex+")'").addClass('show').animate({opacity: 1.0}, fadeDuration);
+		var timer = setInterval('nextSlide()',slideDuration);
+	});
+	function nextSlide () {
+		nextIndex = currentIndex+1;
+		if(nextIndex > $('ul.slideshow li').length)
 		{
-			$('ul.slideshow li img').corner();
-			$('ul.slideshow li').css({opacity: 0.0});
-			$("'ul.slideshow li:nth-child("+nextIndex+")'").addClass('show').animate({opacity: 1.0}, fadeDuration);
-			var timer = setInterval('nextSlide()',slideDuration);
-		})
-		function nextSlide(){
-				nextIndex =currentIndex+1;
-				if(nextIndex > $('ul.slideshow li').length)
-				{
-					nextIndex =1;
-				}
-				$("'ul.slideshow li:nth-child("+nextIndex+")'").addClass('show').animate({opacity: 1.0}, fadeDuration);
-				$("'ul.slideshow li:nth-child("+currentIndex+")'").animate({opacity: 0.0}, fadeDuration).removeClass('show');
-				currentIndex = nextIndex;
+			nextIndex =1;
 		}
-	
+		$("'ul.slideshow li:nth-child("+nextIndex+")'").addClass('show').animate({opacity: 1.0}, fadeDuration);
+		$("'ul.slideshow li:nth-child("+currentIndex+")'").animate({opacity: 0.0}, fadeDuration).removeClass('show');
+		currentIndex = nextIndex;
+	}
+})(jQ);
 			
 </script>
