--- a/app/design/frontend/default/rooja/template/customer/form/login.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/login.phtml
@@ -134,18 +134,16 @@
 		
 		$('ul.slideshow li').css({opacity: 0.0});
 		$("'ul.slideshow li:nth-child("+nextIndex+")'").addClass('show').animate({opacity: 1.0}, fadeDuration);
-		var timer = setInterval('nextSlide()',slideDuration);
+		var timer = setInterval(function () {
+			nextIndex =currentIndex+1;
+			if(nextIndex > $('ul.slideshow li').length) {
+				nextIndex =1;
+			}
+			$("'ul.slideshow li:nth-child("+nextIndex+")'").addClass('show').animate({opacity: 1.0}, fadeDuration);
+			$("'ul.slideshow li:nth-child("+currentIndex+")'").animate({opacity: 0.0}, fadeDuration).removeClass('show');
+			currentIndex = nextIndex;
+		},slideDuration);
 	});
-	
-	function nextSlide () {
-		nextIndex =currentIndex+1;
-		if(nextIndex > $('ul.slideshow li').length) {
-			nextIndex =1;
-		}
-		$("'ul.slideshow li:nth-child("+nextIndex+")'").addClass('show').animate({opacity: 1.0}, fadeDuration);
-		$("'ul.slideshow li:nth-child("+currentIndex+")'").animate({opacity: 0.0}, fadeDuration).removeClass('show');
-		currentIndex = nextIndex;
-	}
 	
 })(jQ);
 </script>
