--- a/app/design/frontend/default/rooja/template/customer/form/login.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/login.phtml
@@ -118,6 +118,7 @@
 	var nextIndex=1;
 	$(document).ready(function(){
 		$("a#loginTab").click(function () {
+			alert('loginTab click');
 			$("#getInvitedCont").hide();
 			$("#loginCont").show();
 			$("#loginTab").addClass('selected');
@@ -125,6 +126,7 @@
 			return false;
 		});
 		$("a#getInvitedTab").click(function () {
+			alert('getInvitedTab click');
 			$("#getInvitedCont").show();
 			$("#loginCont").hide();
 			$("#loginTab").removeClass('selected');
@@ -135,9 +137,9 @@
 		$('ul.slideshow li').css({opacity: 0.0});
 		$("'ul.slideshow li:nth-child("+nextIndex+")'").addClass('show').animate({opacity: 1.0}, fadeDuration);
 		var timer = setInterval(function () {
-			nextIndex =currentIndex+1;
+			nextIndex = currentIndex+1;
 			if(nextIndex > $('ul.slideshow li').length) {
-				nextIndex =1;
+				nextIndex = 1;
 			}
 			$("'ul.slideshow li:nth-child("+nextIndex+")'").addClass('show').animate({opacity: 1.0}, fadeDuration);
 			$("'ul.slideshow li:nth-child("+currentIndex+")'").animate({opacity: 0.0}, fadeDuration).removeClass('show');
