--- a/app/design/frontend/default/rooja/template/customer/form/login.phtml
+++ b/app/design/frontend/default/rooja/template/customer/form/login.phtml
@@ -47,11 +47,14 @@
 			preferPlaceholder: true
 		});
 	
+		alert('about to setTimeout for defaultValue');
 		setTimeout(function() {
 			// Chrome does not fire a change event when autofilling forms
 			// To prevent weird overlap with defaultValue and Chrome autofill,
 			// fire your own change event after 100 or so milliseconds
+			alert('start of timeout');
 			$('input[type="text"]').change();
+			alert('end of timeout');
 		}, 100);
 		
 		alert('init loginTab.click');
