Added log to checkout

--- a/app/design/frontend/default/rooja/template/checkout/onepage.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage.phtml
@@ -42,8 +42,10 @@
 			jQuery("#hintText").html('You will be redirected to CCAvenue our secure online payment-processing partner.');
 		   
 		  });
+
 	 });
 
+		  console.log("TEST");
 
 </script>
 <ol class="opc" id="checkoutSteps">
