--- a/app/design/frontend/default/rooja/template/checkout/onepage.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage.phtml
@@ -28,24 +28,33 @@
 <script type="text/javascript" src="<?php echo $this->getSkinUrl('js/opcheckout.js') ?>"></script>
 <script type="text/javascript">countryRegions = <?php echo $this->helper('directory')->getRegionJson() ?></script>
 <script type="text/javascript">
-	jQuery(document).ready(function(){
-		if (jQuery("#p_method_cashondelivery:checked").length > 0){ jQuery("#hintText").html('We verify all Cash on Delivery orders over the phone after you have made a purchase and start processing the order. Our customer service team will contact you within 24 hours and alternatively you can call us at +91-11-45673347 to verify your order. Failing verification of the order will result in a cancellation. Failure to accept a verified order will revoke your Cash On Delivery privileges on future orders.'); }
+
+	(function ($) {
+		$(document).ready(function(){
+			if ($("#p_method_cashondelivery:checked").length > 0){ $("#hintText").html('We verify all Cash on Delivery orders over the phone after you have made a purchase and start processing the order. Our customer service team will contact you within 24 hours and alternatively you can call us at +91-11-45673347 to verify your order. Failing verification of the order will result in a cancellation. Failure to accept a verified order will revoke your Cash On Delivery privileges on future orders.'); }
 
 
-		  // add functionality for the onclicks here
-		  jQuery("#p_method_cashondelivery").click(function() {
-		    jQuery("#hintText").html('We verify all Cash on Delivery orders over the phone after you have made a purchase and start processing the order. Our customer service team will contact you within 24 hours and alternatively you can call us at +91-11-45673347 to verify your order. Failing verification of the order will result in a cancellation. Failure to accept a verified order will revoke your Cash On Delivery privileges on future orders.');
-		
-		  });
+			  // add functionality for the onclicks here
+			  $("#p_method_cashondelivery").click(function() {
+				$("#hintText").html('We verify all Cash on Delivery orders over the phone after you have made a purchase and start processing the order. Our customer service team will contact you within 24 hours and alternatively you can call us at +91-11-45673347 to verify your order. Failing verification of the order will result in a cancellation. Failure to accept a verified order will revoke your Cash On Delivery privileges on future orders.');
+			
+			  });
 
-		  jQuery("#p_method_Avenues_standard").click(function() {
-			jQuery("#hintText").html('You will be redirected to CCAvenue our secure online payment-processing partner.');
-		   
-		  });
+			  $("#p_method_Avenues_standard").click(function() {
+				$("#hintText").html('You will be redirected to CCAvenue our secure online payment-processing partner.');
+			   
+			  });
 
-	 });
+		 });
 
-		  console.log("TEST");
+		// If the billing form is showing, also show the button to submit it
+		if ($("#co-billing-form").length) {
+
+			console.log("HEY YOU");
+
+		}
+
+	})(jQUery);
 
 </script>
 <ol class="opc" id="checkoutSteps">
