--- a/app/design/frontend/default/rooja/template/checkout/onepage.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage.phtml
@@ -48,11 +48,7 @@
 			// If the billing form is showing, also show the button to submit it
 			if ($("#co-billing-form").length) {
 
-				console.log("HEY YOU");
-
-			} else {
-
-				console.log($('form'));
+				$('#billing-please-wait').show().css('opacity', 1);
 
 			}
 
