--- a/app/design/frontend/default/rooja/template/checkout/onepage.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage.phtml
@@ -57,7 +57,7 @@
 			  $list.children().each(function () {
 				$(this).removeAttr("selected");
 			  });
-			$list.prepend('<option selected="selected">Choose one:</option>');
+			$list.prepend('<option selected="selected" disabled="disabled">Choose one:</option>');
 
 		 });
 
