--- a/app/design/frontend/default/rooja/template/checkout/onepage.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage.phtml
@@ -52,7 +52,7 @@
 
 			}
 
-
+alert("test");
 			  var $list = $("#myList");
 			  $list.children().each(function () {
 				$(this).removeAttr("selected");
