--- a/app/design/frontend/default/rooja/template/checkout/onepage.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage.phtml
@@ -52,8 +52,7 @@
 
 			}
 
-alert("test");
-			  var $list = $("#myList");
+			  var $list = $("#myList, #shipping-address-select");
 			  $list.children().each(function () {
 				$(this).removeAttr("selected");
 			  });
