--- a/app/design/frontend/default/rooja/template/rewards/checkout/rewardspent.phtml
+++ b/app/design/frontend/default/rooja/template/rewards/checkout/rewardspent.phtml
@@ -45,7 +45,7 @@
 <?php if ($this->showSpendings()): ?>
     <tr>
         <td class="a-right" colspan="4">          
-            <div class="caption"><?php echo $this->__('You Will Spend') ?></div>
+            <div class="caption"><?php echo $this->__('Points to Spend') ?></div>
         </td>
         <td class="a-right cart-points-total_spent"> 
             <div class="points-amount">
