--- a/app/design/frontend/default/rooja/template/checkout/onepage.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage.phtml
@@ -57,6 +57,10 @@
 				$(this).removeAttr("selected");
 			  });
 			$list.prepend('<option selected="selected" disabled="disabled">Choose one:</option>');
+			
+			$list.change(function() {
+			 shipping.save();
+			});
 
 		 });
 
