--- a/app/design/frontend/default/rooja/template/checkout/onepage/shipping.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage/shipping.phtml
@@ -59,8 +59,7 @@ function loggedInShipping()
 <!-- Added by Janak -->
 <?php if (!$this->customerHasAddresses()): ?>
 
- <label for="shipping:To">Ship To &nbsp; : &nbsp; &nbsp;</label>
-<select name="myList" id="myList" onchange="changeShipping()" style="width: 40em;">
+<select name="myList" id="myList" onchange="changeShipping()">
 <option value="billing" selected="selected">Same as Billing Address</option>
 <option value="new">New Shipping Address</option>
 </select>
@@ -146,7 +145,7 @@ function loggedInShipping()
     <div id="shipping-buttons-container">
   <!-- <a href="#" class="back left" onclick="checkout.back(); return false;">Back</a> -->
 <button type="button" class="form-button right" onclick="shipping.save()" style="display:none;opacity:0;filter: alpha(opacity = 0);" ><span>Continue</span></button>
-        <span id="shipping-please-wait" style="opacity:0;filter: alpha(opacity = 0);" class="please-wait">
+        <span id="shipping-please-wait" style="/*opacity:0;filter: alpha(opacity = 0);*/" class="please-wait">
             <img src="<?php echo $this->getSkinUrl('images/opc-ajax-loader.gif') ?>" class="v-middle" alt="" /> &nbsp; <?php echo $this->__('Loading next step...') ?> &nbsp;
         </span>
     </div>
