--- a/app/design/frontend/default/rooja/template/checkout/onepage.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/onepage.phtml
@@ -59,7 +59,7 @@
 			$list.prepend('<option selected="selected" disabled="disabled">Choose one:</option>');
 			
 			$list.change(function(){
-				if($('#showshipping').is(":visible")){
+				if($('#shipping-new-address-form').is(":visible")){
 					$('#shippingSaveBtn').show();
 				}
 				else{$('#shippingSaveBtn').hide();}
