email order fixes

--- a/app/locale/en_US/template/email/sales/order_new.html
+++ b/app/locale/en_US/template/email/sales/order_new.html
@@ -79,10 +79,9 @@
 				</table>
 				</td>
 			</tr>
-						<tr><td><img src="{{skin url="images/email/break.jpg" _area='frontend'}}" /></td></tr>
-				
 				<tr style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse;">
 					<td colspan="2" id="footer" style="margin: 0;padding: 20px 10px;border: 0;border-spacing: 0px;border-collapse: collapse;width: 650px; font-size: 13px;color: #000;">
+					<img src="{{skin url="images/email/break.jpg" _area='frontend'}}" /> <br/>
 						Questions about your order? Contact us at <a href="mailto:contact@rooja.com" style="color: #000;text-decoration: underline;">support@rooja.in</a> or call us at  {{config path='general/store_information/phone'}} (We are open all days 10am-7pm).
 				</td></tr>
 			</table>
