--- a/app/design/frontend/base/default/template/sales/order/totals.phtml
+++ b/app/design/frontend/base/default/template/sales/order/totals.phtml
@@ -28,6 +28,7 @@
  * @see Mage_Sales_Block_Order_Totals
  */
 ?>
+<table width="580">
 <?php foreach ($this->getTotals() as $_code => $_total): ?>
     <?php if ($_total->getBlockName()): ?>
         <?php echo $this->getChildHtml($_total->getBlockName(), false); ?>
@@ -48,5 +49,6 @@
             <?php endif?>
         </td>
     </tr>
+  </table>
     <?php endif?>
 <?php endforeach?>
