--- a/app/locale/en_US/template/email/sales/order_new.html
+++ b/app/locale/en_US/template/email/sales/order_new.html
@@ -1,7 +1,4 @@
-<html>
-<head>
 <!--@subject {{var store.getFrontendName()}}: New Order # {{var order.increment_id}} @-->
-
 <!--@vars
 {"store url=\"\"":"Store Url",
 "skin url=\"images/logo_email.gif\" _area='frontend'":"Email Logo Image",
@@ -17,74 +14,95 @@
 "layout handle=\"sales_email_order_items\" order=$order":"Order Items Grid",
 "var order.getEmailCustomerNote()":"Email Order Note"}
 @-->
+<!--@styles
+body,td { color:#2f2f2f; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif; }
+@-->
 
-
-
-</head>
-<table id="main" style="margin: 0 auto;padding: 0;border: 0;background: #fff;font-family: Helvetica, Arial, sans-serif;color: #333;font-size: 15px;border-spacing: 0px;border-collapse: collapse;width: 650px;" width="650">
-	<tr style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse;">
-		<td colspan="2" class="header" style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse; width: 650px;height: 95px;"><a href="http://rooja.com"><img src="{{skin url="images/email/email-templates_01.png" _area='frontend'}}" alt="Rooja Fashion"></a></td>
-	</tr>
-	<tr style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse;">
-		<td colspan="2" style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse;">
-			<img src="{{skin url="images/email/email-templates_02.jpg" _area='frontend'}}" width="650" height="88" alt="" style="margin: 0;padding: 0;border: 0;background: #fff;font-family: Helvetica, Arial, sans-serif;color: #333;font-size: 15px;"></td>
-	</tr>
-	<tr style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse;">
-		<td colspan="2" style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse;">
-			<table id="orderInfoHead" style="margin: 0;padding: 2px 10px;border: 0;background: #412647;font-family: Helvetica, Arial, sans-serif;color: #333;font-size: 15px;border-spacing: 0px;border-collapse: collapse;width: 650px;" width="650">
-			<tr style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse;">
-				<td class="subhead-sect" style="margin: 0;padding: 5px 10px;border: 0;border-spacing: 0px;border-collapse: collapse;width: 33%;">
-					<p class="subhead" style="font-family: Helvetica, Arial;font-weight: bold;font-size: 15px;color: #fff;">Order Number</p>
-				</td>
-				<td class="subhead-sect" style="margin: 0;padding: 5px 10px;border: 0;border-spacing: 0px;border-collapse: collapse;width: 33%;">
-					<p class="subhead" style="font-family: Helvetica, Arial;font-weight: bold;font-size: 15px;color: #fff;">Order Date</p>
-				</td>
-				<td class="subhead-sect" style="margin: 0;padding: 5px 10px;border: 0;border-spacing: 0px;border-collapse: collapse;width: 33%;">
-					<p class="subhead" style="font-family: Helvetica, Arial;font-weight: bold;font-size: 15px;color: #fff;">Shipping Address</p>
-				</td>
-			</tr></table>
-	</td></tr>
-<!-- CUSTOMER INFO -->
-	<tr style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse;">
-		<td colspan="2" style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse;">
-		
-			<table id="orderInfo" style="margin: 0;padding: 0;border: 0;background: #e2e2e2;font-family: Helvetica, Arial, sans-serif;color: #333;font-size: 15px;border-spacing: 0px;border-collapse: collapse;width: 650px;" width="650">
-				<tr style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse;">
-					<td class="subhead-sect" style="margin: 0;padding: 5px 10px;border: 0;border-spacing: 0px;border-collapse: collapse;width: 33%;">
-						{{var order.increment_id}}
-					</td>
-					<td class="subhead-sect" style="margin: 0;padding: 5px 10px;border: 0;border-spacing: 0px;border-collapse: collapse;width: 33%;">
-						{{var order.getCreatedAtFormated('short')}
-					</td>
-					<td class="subhead-sect" style="margin: 0;padding: 5px 10px;border: 0;border-spacing: 0px;border-collapse: collapse;width: 33%;">
-						{{var order.shipping_address.format('html')}}
-					</td>
-				</tr>
-			</table>
-		</td>
-	</tr>
-	<tr style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse;">
-		<td colspan="2" style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse;">
-
-		<table width="650">
-			<tr class="item-info">
-			<td>
-                   	{{depend order.getIsNotVirtual()}}
-	                   <br/>
-	                   {{/depend}}
-	                   {{layout handle="sales_email_order_items" order=$order}}
-	                   <p style="font-size:12px; margin:0 0 10px 0">{{var order.getEmailCustomerNote()}}</p>
-	</td>
-					</tr>
-				</table>
-				</td>
-			</tr>
-				<tr style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse;">
-					<td colspan="2" id="footer" style="margin: 0;padding: 20px 10px;border: 0;border-spacing: 0px;border-collapse: collapse;width: 650px; font-size: 13px;color: #000;">
-					<img src="{{skin url="images/email/break.jpg" _area='frontend'}}" /> <br/>
-						Questions about your order? Contact us at <a href="mailto:contact@rooja.com" style="color: #000;text-decoration: underline;">support@rooja.in</a> or call us at  {{config path='general/store_information/phone'}} (We are open all days 10am-7pm).
-				</td></tr>
-			</table>
-			<!-- End Save for Web Slices -->
-
-			</html>
+<body style="background:#F6F6F6; font-family:Verdana, Arial, Helvetica, sans-serif; font-size:12px; margin:0; padding:0;">
+<div style="background:#F6F6F6; font-family:Verdana, Arial, Helvetica, sans-serif; font-size:12px; margin:0; padding:0;">
+<table cellspacing="0" cellpadding="0" border="0" width="100%">
+<tr>
+    <td align="center" valign="top" style="padding:20px 0 20px 0">
+        <table bgcolor="#FFFFFF" cellspacing="0" cellpadding="10" border="0" width="650" style="border:1px solid #E0E0E0;">
+            <!-- [ header starts here] -->
+            <tr>
+                <td valign="top"><a href="{{store url=""}}"><img src="{{skin url="images/logo_email.gif" _area='frontend'}}" alt="{{var store.getFrontendName()}}"  style="margin-bottom:10px;" border="0"/></a></td>
+            </tr>
+            <!-- [ middle starts here] -->
+            <tr>
+                <td valign="top">
+                    <h1 style="font-size:22px; font-weight:normal; line-height:22px; margin:0 0 11px 0;"">Hello, {{htmlescape var=$order.getCustomerName()}}</h1>
+                    <p style="font-size:12px; line-height:16px; margin:0;">
+                        Thank you for your order from {{var store.getFrontendName()}}.
+                        Once your package ships we will send an email with a link to track your order.
+                        You can check the status of your order by <a href="{{store url="customer/account/"}}" style="color:#1E7EC8;">logging into your account</a>.
+                        If you have any questions about your order please contact us at <a href="mailto:{{config path='trans_email/ident_support/email'}}" style="color:#1E7EC8;">{{config path='trans_email/ident_support/email'}}</a> or call us at <span class="nobr">{{config path='general/store_information/phone'}}</span> Monday - Friday, 8am - 5pm PST.
+                    </p>
+                    <p style="font-size:12px; line-height:16px; margin:0;">Your order confirmation is below. Thank you again for your business.</p>
+            </tr>
+            <tr>
+                <td>
+                    <h2 style="font-size:18px; font-weight:normal; margin:0;">Your Order #{{var order.increment_id}} <small>(placed on {{var order.getCreatedAtFormated('long')}})</small></h2>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <table cellspacing="0" cellpadding="0" border="0" width="650">
+                        <thead>
+                        <tr>
+                            <th align="left" width="325" bgcolor="#EAEAEA" style="font-size:13px; padding:5px 9px 6px 9px; line-height:1em;">Billing Information:</th>
+                            <th width="10"></th>
+                            <th align="left" width="325" bgcolor="#EAEAEA" style="font-size:13px; padding:5px 9px 6px 9px; line-height:1em;">Payment Method:</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td valign="top" style="font-size:12px; padding:7px 9px 9px 9px; border-left:1px solid #EAEAEA; border-bottom:1px solid #EAEAEA; border-right:1px solid #EAEAEA;">
+                                {{var order.getBillingAddress().format('html')}}
+                            </td>
+                            <td>&nbsp;</td>
+                            <td valign="top" style="font-size:12px; padding:7px 9px 9px 9px; border-left:1px solid #EAEAEA; border-bottom:1px solid #EAEAEA; border-right:1px solid #EAEAEA;">
+                                {{var payment_html}}
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    <br/>
+                    {{depend order.getIsNotVirtual()}}
+                    <table cellspacing="0" cellpadding="0" border="0" width="650">
+                        <thead>
+                        <tr>
+                            <th align="left" width="325" bgcolor="#EAEAEA" style="font-size:13px; padding:5px 9px 6px 9px; line-height:1em;">Shipping Information:</th>
+                            <th width="10"></th>
+                            <th align="left" width="325" bgcolor="#EAEAEA" style="font-size:13px; padding:5px 9px 6px 9px; line-height:1em;">Shipping Method:</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <td valign="top" style="font-size:12px; padding:7px 9px 9px 9px; border-left:1px solid #EAEAEA; border-bottom:1px solid #EAEAEA; border-right:1px solid #EAEAEA;">
+                                {{var order.getShippingAddress().format('html')}}
+                                &nbsp;
+                            </td>
+                            <td>&nbsp;</td>
+                            <td valign="top" style="font-size:12px; padding:7px 9px 9px 9px; border-left:1px solid #EAEAEA; border-bottom:1px solid #EAEAEA; border-right:1px solid #EAEAEA;">
+                                {{var order.getShippingDescription()}}
+                                &nbsp;
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                    <br/>
+                    {{/depend}}
+                    {{layout handle="sales_email_order_items" order=$order}}
+                    <p style="font-size:12px; margin:0 0 10px 0">{{var order.getEmailCustomerNote()}}</p>
+                </td>
+            </tr>
+            <tr>
+                <td bgcolor="#EAEAEA" align="center" style="background:#EAEAEA; text-align:center;"><center><p style="font-size:12px; margin:0;">Thank you, <strong>{{var store.getFrontendName()}}</strong></p></center></td>
+            </tr>
+        </table>
+    </td>
+</tr>
+</table>
+</div>
+</body>
