--- a/app/locale/en_US/template/email/sales/order_update.html
+++ b/app/locale/en_US/template/email/sales/order_update.html
@@ -10,18 +10,18 @@
 "var store.getFrontendName()":"Store Name"}
 @-->
 <!--@styles
-body,td { color:#2f2f2f; font:11px/1.35em Arial, Helvetica, sans-serif; }
+body,td { color:#2f2f2f; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif; }
 @-->
 
-<body style="background:#F6F6F6; font-family:Arial, Helvetica, sans-serif; font-size:12px; margin:0; padding:0;">
-<div style="background:#F6F6F6; font-family:Arial, Helvetica, sans-serif; font-size:12px; margin:0; padding:0;">
+<body style="background:#F6F6F6; font-family:Verdana, Arial, Helvetica, sans-serif; font-size:12px; margin:0; padding:0;">
+<div style="background:#F6F6F6; font-family:Verdana, Arial, Helvetica, sans-serif; font-size:12px; margin:0; padding:0;">
 <table cellspacing="0" cellpadding="0" border="0" height="100%" width="100%">
 <tr>
     <td align="center" valign="top" style="padding:20px 0 20px 0">
         <!-- [ header starts here] -->
         <table bgcolor="#FFFFFF" cellspacing="0" cellpadding="10" border="0" width="650" style="border:1px solid #E0E0E0;">
             <tr>
-                <td colspan="2" class="header" style="margin: 0;padding: 0;border: 0;border-spacing: 0px;border-collapse: collapse; width: 650px;height: 95px;"><a href="http://rooja.com"><img src="{{skin url="images/email/email-templates_01.png" _area='frontend'}}" alt="Rooja Fashion"></a></td>
+                <td valign="top"><a href="{{store url=""}}"><img src="{{skin url="images/logo_email.gif" _area='frontend'}}" alt="{{var store.getFrontendName()}}"  style="margin-bottom:10px;" border="0"/></a></td>
             </tr>
             <!-- [ middle starts here] -->
             <tr>
